try to capture and printout ET system streams without blocking emu operation